# LigonLibrary

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ligonlibrary/: __init__.py  authinfo.py  dataframes.py  email_from_ligon.py  sheets.py
scripts/: fetch-agent-branches.sh
tests/: conftest.py  test_authinfo.py  test_df_to_orgtbl.py  test_email_from_ligon.py  test_from_dta.py  test_get_dataframe.py  test_sheets.py
