[project]
name = "ligonlibrary"
version = "0.1.6"
description = "Various little hacks."
requires-python = ">=3.11"
readme = "README.md"
authors = [ {name = "Ethan Ligon", email = "ligon@berkeley.edu"}
    ]
license = {text = "CC-BY-4.0"}


[tool.poetry]

[tool.poetry.dependencies]
pandas = "^2.3.1"
google-auth-oauthlib = "^1.2.2"
thefuzz = "^0.22.1"
google-api-python-client = "^2.178.0"
gspread = "^5.12.0"
gspread-pandas = "^3.3.0"
python-gnupg = "^0.5.2"
python-magic = "^0.4.27"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
ipython = "^8.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
